...
            ) {
                OutlinedTextField(
                    value = minTempInput,
                    onValueChange = {
                        minTempInput = validateNumberInput(it, allowNegative = true)
                    },
                    label = { Text("温度下限") },
                    modifier = Modifier.weight(1f),
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Decimal),
                    isError = checkRange(
                        minTempInput,
                        -40f,
...

                OutlinedTextField(
                    value = maxTempInput,
                    onValueChange = {
                        maxTempInput = validateNumberInput(it, allowNegative = true)
                    },
                    label = { Text("温度上限") },
                    modifier = Modifier.weight(1f),
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Decimal),
                    isError = checkRange(
                        maxTempInput,
                        -40f,
...
            ) {
                OutlinedTextField(
                    value = minHumidityInput,
                    onValueChange = {
                        minHumidityInput = validateNumberInput(it, allowNegative = false)
                    },
                    label = { Text("湿度下限") },
                    modifier = Modifier.weight(1f),
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Decimal),
                    isError = checkRange(
                        minHumidityInput,
                        0f,
...

                OutlinedTextField(
                    value = maxHumidityInput,
                    onValueChange = {
                        maxHumidityInput = validateNumberInput(it, allowNegative = false)
                    },
                    label = { Text("湿度上限") },
                    modifier = Modifier.weight(1f),
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Decimal),
                    isError = checkRange(
                        maxHumidityInput,
                        0f,
...
